# Research-Swarm

./: .gitignore  CAPTURE.md  README.md  SPEC.md  pyproject.toml  run.py  schedule-install
config/: beats.toml  cadence.toml  calendar.toml  interests.toml  models.toml
dashboard/: README.md  _sample.js  index.html
docs/: HANDOFF-researchswarm-pivot.md  critic-rubric.md  surge-mode.md
issues/: index.json
prompts/: critic-output-schema-v2.json  critic-output-schema.json  critic-retry.md  critic-v2.md  critic.md  dossier-scan.md  manager-retry.md  manager-v2.md  manager.md  researcher-v2.md  researcher.md
researchswarm/: apertures.py  beats.py  cadence.py  calendar.py  critic.py  critique.py  dossiers.py  findings.py  manager.py  programs.py  prompts.py  publish.py  research.py  researcher.py  runs.py  state.py  state_edits.py  stub.py  synthesis.py  transport.py  validation.py  validator.py
scripts/: check-spec-links.py  seed-roster-migration.py
state/: catalyst-queue.json  thesis.json  watchlist.json
tests/: conftest.py  test_apertures.py  test_cadence.py  test_cadence_v2.py  test_calendar.py  test_critic.py  test_critic_prompt.py  test_critic_v2.py  test_critique.py  test_dashboard.py  test_dashboard_vocabulary.py  test_dossiers.py  test_findings.py  test_findings_dossier.py  test_live_critic.py  test_live_manager.py  test_live_researcher.py  test_manager.py  test_manager_prompt.py  test_manager_prompt_v2.py  test_manager_v2.py  test_programs.py  test_prompts.py  test_prompts_dossier.py  test_publish.py  test_publish_v2.py  test_research.py  test_run_cli.py  (+17 more)
(+54 files in other folders)
