[project]
name = "researchswarm"
version = "0.1.0"
description = "Unattended oncology biotech + pharma M&A competitive-intelligence pipeline"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["researchswarm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
